syntax = "proto3";

package datadog.config;

option go_package = "pkg/proto/pbgo"; // golang


message ClientLatestConfigsRequest {
  string hostname = 1;
  string agentVersion = 2;
  // timestamp and snapshot versions move in tandem so they are the same.
  uint64 current_config_snapshot_version = 3;
  uint64 current_config_root_version = 9;
  uint64 current_director_root_version = 8;
  repeated Product products = 4;
  repeated Product new_products = 5;
}

message LatestConfigsResponse {
  ConfigMetas config_metas = 1;
  DirectorMetas director_metas = 2;
  repeated File target_files = 3;
}

message ConfigMetas {
  repeated TopMeta roots = 1;
  TopMeta timestamp = 2;
  TopMeta snapshot = 3;
  TopMeta topTargets = 4;
  repeated DelegatedMeta delegatedTargets = 5;
}

message DirectorMetas {
  repeated TopMeta roots = 1;
  TopMeta timestamp = 2;
  TopMeta snapshot = 3;
  TopMeta targets = 4;
}

message DelegatedMeta {
  uint64 version = 1;
  string role = 2;
  bytes raw = 3;
}

message TopMeta {
  uint64 version = 1;
  bytes raw = 2;
}

message File {
  string path = 1;
  bytes raw = 2;
}

enum Product {
  NO_PRODUCT = 0;
  LIVE_DEBUGGING = 1;
  APPSEC = 2;
  RUNTIME_SECURITY = 3;
  APM_SAMPLING = 4;
  TESTING1 = 5;
  TESTING2 = 6;
}

message ConfigResponse {
  uint64 config_snapshot_version = 1;
  uint64 config_delegated_target_version = 2;
  repeated TopMeta directoryRoots = 3;
  TopMeta directoryTargets = 4;
  repeated File target_files = 5;
}

message SubscribeConfigRequest {
	uint64 current_config_snapshot_version = 1;
  Product product = 2;
}

message GetConfigsRequest {
  Product product = 1;
  uint64 current_config_product_version = 2;
  uint64 current_director_root_version = 3;
}

message GetConfigsResponse {
  repeated ConfigResponse configResponses = 1;
}
